address review comments

--- a/almond/Dockerfile
+++ b/almond/Dockerfile
@@ -55,15 +55,16 @@ RUN \
     \
     && npm config set unsafe-perm \
     \
-    && su almond -c "git clone -b \"${ALMOND_VERSION}\" --depth 1 https://github.com/stanford-oval/almond-server ." && \
-    su almond -c "npm ci" && \
-    su almond -c "npm install --no-package-lock --ignore-scripts snowboy" && \
-    cd node_modules/snowboy/ && \
-    su almond -c "PYTHON=python2 npx node-pre-gyp clean configure" && \
-    su almond -c "make -C build/" && \
-    rm -fr /home/almond/.cache && \
-    rm -fr /home/almond/.npm && \
-    mkdir /home/almond/.cache \
+    && su almond -c "git clone -b \"${ALMOND_VERSION}\" --depth 1 https://github.com/stanford-oval/almond-server ."
+    && su almond -c "npm ci" \
+    && su almond -c "npm install --no-package-lock --ignore-scripts snowboy"
+    && cd node_modules/snowboy/ \
+    && su almond -c "PYTHON=python2 npx node-pre-gyp clean configure" \
+    && su almond -c "make -C build/" \
+    && rm -fr /home/almond/.cache \
+    && rm -fr /home/almond/.npm \
+    && mkdir /home/almond/.cache \
+    \
     && apt-get purge -y --auto-remove \
         build-essential \
         libcanberra-dev \
