--- a/almond/config.json
+++ b/almond/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Almond",
-  "version": "2.0.0-1",
+  "version": "2.0.0",
   "slug": "almond",
   "description": "The open-source, privacy-preserving voice assistant",
   "url": "https://github.com/home-assistant/hassio-addons/blob/master/almond",
