Lock database during snapshot operation
Fixes: #1353

--- a/mariadb/config.json
+++ b/mariadb/config.json
@@ -8,6 +8,8 @@
   "startup": "system",
   "init": false,
   "timeout": 20,
+  "snapshot_pre": "/bin/s6-svc -wU -u /run/s6/services/mariadb-lock/",
+  "snapshot_post": "/bin/s6-svc -wd -d /run/s6/services/mariadb-lock/",
   "services": ["mysql:provide"],
   "ports": {
     "3306/tcp": null
