dnsmasq: extend the default dns servers to more than ipv4-only google
Providers:
- (unfiltered) AdGuard
- Cloudflare
- Google
- Neustar
- OpenNIC

--- a/dnsmasq/config.json
+++ b/dnsmasq/config.json
@@ -13,7 +13,32 @@
     "53/udp": 53
   },
   "options": {
-    "defaults": ["8.8.8.8", "8.8.4.4"],
+    "defaults": [
+      "2a10:50c0::1:ff",
+      "2a10:50c0::2:ff",
+      "2606:4700:4700::1111",
+      "2606:4700:4700::1001",
+      "2001:4860:4860::8888",
+      "2001:4860:4860::8844",
+      "2620:74:1b::1:1",
+      "2620:74:1c::2:2",
+      "2610:a1:1018::1",
+      "2610:a1:1019::1",
+      "2a05:dfc7:5::53",
+      "2a05:dfc7:5::5353",
+      "94.140.14.140",
+      "94.140.14.141",
+      "1.1.1.1",
+      "1.0.0.1",
+      "8.8.8.8",
+      "8.8.4.4",
+      "64.6.64.6",
+      "64.6.65.6",
+      "156.154.70.1",
+      "156.154.71.1",
+      "185.121.177.177",
+      "169.239.202.202"
+    ],
     "forwards": [],
     "hosts": [],
     "services": []
