configurator: Fix Home Assistant API endpoint

--- a/configurator/rootfs/etc/configurator.conf
+++ b/configurator/rootfs/etc/configurator.conf
@@ -7,7 +7,7 @@
     "SSL_CERTIFICATE": null,
     "SSL_KEY": null,
     "IGNORE_SSL": false,
-    "HASS_API": "http://supervisor/homeassistant/api/",
+    "HASS_API": "http://supervisor/core/api/",
     "HASS_WS_API": null,
     "HASS_API_PASSWORD": null,
     "USERNAME": null,
