--- a/zwave_js/rootfs/usr/share/tempio/zwave_config.conf
+++ b/zwave_js/rootfs/usr/share/tempio/zwave_config.conf
@@ -8,5 +8,10 @@
         "cacheDir": "/data/cache",
         "throttle": "slow"
     },
-    "networkKey": "{{ .network_key }}"
+    "securityKeys": {
+        "S0_Legacy": "{{ .s0_legacy_key }}",
+        "S2_AccessControl": "{{ .s2_accesscontrol_key }}",
+        "S0_Authenticated": "{{ .s2_authenticated_key }}",
+        "S0_Unauthenticated": "{{ .s2_unauthenticated_key }}"
+    }
 }
