--- a/zwave_js/rootfs/usr/share/tempio/zwave_config.conf
+++ b/zwave_js/rootfs/usr/share/tempio/zwave_config.conf
@@ -10,7 +10,7 @@
     },
     "securityKeys": {
         "S0_Legacy": "{{ .s0_legacy_key }}",
-        "S2_AccessControl": "{{ .s2_accesscontrol_key }}",
+        "S2_AccessControl": "{{ .s2_access_control_key }}",
         "S0_Authenticated": "{{ .s2_authenticated_key }}",
         "S0_Unauthenticated": "{{ .s2_unauthenticated_key }}"
     }
