--- a/nginx_proxy/data/nginx.conf
+++ b/nginx_proxy/data/nginx.conf
@@ -7,6 +7,9 @@ events {
 }
 
 http {
+    include       mime.types;
+    default_type  application/octet-stream;
+	
     map $http_upgrade $connection_upgrade {
         default upgrade;
         ''      close;
