--- a/nginx_proxy/config.json
+++ b/nginx_proxy/config.json
@@ -17,7 +17,8 @@
     "hsts": "max-age=31536000; includeSubDomains",
     "cloudflare": false,
     "customize": {
-      "active": false,
+      "active": false,      
+      "http": "nginx_proxy_http*.conf",      
       "default": "nginx_proxy_default*.conf",
       "servers": "nginx_proxy/*.conf"
     }
@@ -30,6 +31,7 @@
     "cloudflare": "bool",
     "customize": {
       "active": "bool",
+      "http": "str",      
       "default": "str",
       "servers": "str"
     }
