--- a/nginx_proxy/data/nginx.conf
+++ b/nginx_proxy/data/nginx.conf
@@ -9,7 +9,9 @@ events {
 http {
     include       mime.types;
     default_type  application/octet-stream;
-	
+
+    #include /share/nginx_proxy_http*.conf;	
+    
     map $http_upgrade $connection_upgrade {
         default upgrade;
         ''      close;
