--- a/nginx_proxy/data/nginx.conf
+++ b/nginx_proxy/data/nginx.conf
@@ -6,6 +6,8 @@ events {
 	worker_connections 1024;
 }
 
+#include /share/nginx_proxy_root*.conf;
+
 http {
     include       mime.types;
     default_type  application/octet-stream;
