Add BUILD_ARCH as ARG to Dockerfile Remove unneeded ARCH detection

--- a/letsencrypt/Dockerfile
+++ b/letsencrypt/Dockerfile
@@ -2,6 +2,7 @@ ARG BUILD_FROM
 FROM $BUILD_FROM
 
 # setup base
+ARG BUILD_ARCH
 ARG CERTBOT_VERSION
 ARG CERTBOT_DNS_DIRECTADMIN_VERSION
 ARG CERTBOT_NETCUP_VERSION
@@ -23,16 +24,8 @@ RUN apk add --no-cache --update \
     && echo "cffi==1.14.6" >> /tmp/requirements.txt \
     && echo "cryptography==3.4.8" >> /tmp/requirements.txt \
     && echo "setuptools==57.5.0" >> /tmp/requirements.txt \
-    && apkArch="$(apk --print-arch)"; \
-       case "$apkArch" in \
-         armhf) export ARCH='armhf' ;; \
-         x86) export ARCH='i386' ;; \
-         armv7) export ARCH='armv7' ;; \
-         x86_64) export ARCH='amd64' ;; \
-         aarch64) export ARCH='aarch64' ;; \
-        esac \
     && pip3 install --no-cache-dir --find-links \
-        "https://wheels.home-assistant.io/alpine-$(cut -d '.' -f 1-2 < /etc/alpine-release)/${ARCH}/" \
+        "https://wheels.home-assistant.io/alpine-$(cut -d '.' -f 1-2 < /etc/alpine-release)/${BUILD_ARCH}/" \
         certbot==${CERTBOT_VERSION} \
         certbot-dns-cloudflare==${CERTBOT_VERSION} \
         certbot-dns-cloudxns==${CERTBOT_VERSION} \
