- Add support for GoDaddy DNS - Update image to Alpine 3.14 - Update certbot to 1.19 - Update DirectAdmin DNS to 0.0.23 - Update Netcup DNS to 1.1.1 - Update Njalla DNS to 1.0.0 - Update Gandi DNS to 1.3.2 - Update Transip DNS to 0.3.3

--- a/letsencrypt/Dockerfile
+++ b/letsencrypt/Dockerfile
@@ -2,12 +2,14 @@ ARG BUILD_FROM
 FROM $BUILD_FROM
 
 # setup base
+ARG BUILD_ARCH
 ARG CERTBOT_VERSION
 ARG CERTBOT_DNS_DIRECTADMIN_VERSION
 ARG CERTBOT_NETCUP_VERSION
 ARG CERTBOT_NJALLA_VERSION
 ARG CERTBOT_GANDI_VERSION
 ARG CERTBOT_DNS_TRANSIP_VERSION
+ARG CERTBOT_DNS_GODADDY_VERSION
 
 RUN apk add --no-cache --update \
         libffi \
@@ -18,6 +20,10 @@ RUN apk add --no-cache --update \
         libffi-dev \
         musl-dev \
         openssl-dev \
+    && pip3 install setuptools==57.5.0 \
+    && echo "cffi==1.14.6" >> /tmp/requirements.txt \
+    && echo "cryptography==3.4.8" >> /tmp/requirements.txt \
+    && echo "setuptools==57.5.0" >> /tmp/requirements.txt \
     && pip3 install --no-cache-dir --find-links \
         "https://wheels.home-assistant.io/alpine-$(cut -d '.' -f 1-2 < /etc/alpine-release)/${BUILD_ARCH}/" \
         certbot==${CERTBOT_VERSION} \
@@ -40,6 +46,8 @@ RUN apk add --no-cache --update \
         certbot-dns-netcup==${CERTBOT_NETCUP_VERSION} \
         certbot-plugin-gandi==${CERTBOT_GANDI_VERSION} \
         certbot-dns-transip==${CERTBOT_DNS_TRANSIP_VERSION} \
+        certbot-dns-godaddy==${CERTBOT_DNS_GODADDY_VERSION} \
+        -c /tmp/requirements.txt \
     && apk del .build-dependencies
 
 # Copy data
