--- a/zwave_js/rootfs/usr/share/tempio/zwave_config.conf
+++ b/zwave_js/rootfs/usr/share/tempio/zwave_config.conf
@@ -9,9 +9,9 @@
         "throttle": "slow"
     },
     "securityKeys": {
-        "S0_Legacy": "{{ .s0_legacy_key }}",
-        "S2_AccessControl": "{{ .s2_access_control_key }}",
-        "S2_Authenticated": "{{ .s2_authenticated_key }}",
-        "S2_Unauthenticated": "{{ .s2_unauthenticated_key }}"
+        "S0_Legacy": "{{ .s0_legacy }}",
+        "S2_AccessControl": "{{ .s2_access_control }}",
+        "S2_Authenticated": "{{ .s2_authenticated }}",
+        "S2_Unauthenticated": "{{ .s2_unauthenticated }}"
     }
 }
