Add S2 keys support to zwave_js config (#2157)
Co-authored-by: Martin Hjelmare <marhje52@gmail.com>

--- a/zwave_js/rootfs/usr/share/tempio/zwave_config.conf
+++ b/zwave_js/rootfs/usr/share/tempio/zwave_config.conf
@@ -8,5 +8,10 @@
         "cacheDir": "/data/cache",
         "throttle": "slow"
     },
-    "networkKey": "{{ .network_key }}"
+    "securityKeys": {
+        "S0_Legacy": "{{ .s0_legacy }}",
+        "S2_AccessControl": "{{ .s2_access_control }}",
+        "S2_Authenticated": "{{ .s2_authenticated }}",
+        "S2_Unauthenticated": "{{ .s2_unauthenticated }}"
+    }
 }
