--- a/zwave_js/config.json
+++ b/zwave_js/config.json
@@ -18,14 +18,21 @@
   "discovery": ["zwave_js"],
   "options": {
     "device": null,
-    "network_key": "",
+    "s0_legacy_key": "",
+    "s2_access_control_key": "",
+    "s2_authenticated_key": "",
+    "s2_unauthenticated_key": "",
     "log_level": "info"
   },
   "schema": {
     "device": "device(subsystem=tty)",
-    "network_key": "match(|[0-9a-fA-F]{32,32})",
+    "s0_legacy_key": "match(|[0-9a-fA-F]{32,32})?",
+    "s2_access_control_key": "match(|[0-9a-fA-F]{32,32})?",
+    "s2_authenticated_key": "match(|[0-9a-fA-F]{32,32})?",
+    "s2_unauthenticated_key": "match(|[0-9a-fA-F]{32,32})?",
     "log_level": "list(silly|debug|verbose|http|info|warn|error)?",
-    "emulate_hardware": "bool?"
+    "emulate_hardware": "bool?",
+    "network_key": "match(|[0-9a-fA-F]{32,32})?"
   },
   "image": "homeassistant/{arch}-addon-zwave_js"
 }
