--- a/zwave_js/config.json
+++ b/zwave_js/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Z-Wave JS",
-  "version": "0.1.41",
+  "version": "0.1.42",
   "slug": "zwave_js",
   "description": "Control a ZWave network with Home Assistant Z-Wave JS",
   "arch": ["amd64", "i386", "armhf", "armv7", "aarch64"],
@@ -22,7 +22,8 @@
     "s2_access_control_key": "",
     "s2_authenticated_key": "",
     "s2_unauthenticated_key": "",
-    "log_level": "info"
+    "log_level": "info",
+    "network_key": ""
   },
   "schema": {
     "device": "device(subsystem=tty)",
