Always set network_key if unset

--- a/zwave_js/config.json
+++ b/zwave_js/config.json
@@ -22,8 +22,7 @@
     "s2_access_control_key": "",
     "s2_authenticated_key": "",
     "s2_unauthenticated_key": "",
-    "log_level": "info",
-    "network_key": ""
+    "log_level": "info"
   },
   "schema": {
     "device": "device(subsystem=tty)",
