--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,18 +1,23 @@
 {
-	"name": "Home Assistant Add-Ons",
-	"context": "..",
-	"dockerFile": "Dockerfile",
-	"appPort": ["7123:8123", "7357:4357"],
-    "postStartCommand": "service docker start",
-	"runArgs": ["-e", "GIT_EDITOR=code --wait", "--privileged"],
-	"containerEnv": {
-		"WORKSPACE_DIRECTORY": "${containerWorkspaceFolder}"
-	},
-	"extensions": [
-		"timonwong.shellcheck",
-		"esbenp.prettier-vscode"
-	],
-	"settings": { 
-		"terminal.integrated.shell.linux": "/bin/bash"
-	}
-}
+	"name": "Home Assistant Add-ons",
+    "image": "ghcr.io/home-assistant/devcontainer:addons",
+    "appPort": ["7123:8123", "7357:4357"],
+    "postStartCommand": "bash devcontainer_bootstrap",
+    "runArgs": ["-e", "GIT_EDITOR=code --wait", "--privileged"],
+    "containerEnv": {
+      "WORKSPACE_DIRECTORY": "${containerWorkspaceFolder}"
+    },
+    "extensions": ["timonwong.shellcheck", "esbenp.prettier-vscode"],
+    "settings": {
+      "terminal.integrated.profiles.linux": {
+        "zsh": {
+          "path": "/usr/bin/zsh"
+        }
+      },
+      "terminal.integrated.defaultProfile.linux": "zsh",
+      "editor.formatOnPaste": false,
+      "editor.formatOnSave": true,
+      "editor.formatOnType": true,
+      "files.trimTrailingWhitespace": true
+    }
+  }
