--- a/dnsmasq/rootfs/usr/share/tempio/dnsmasq.config
+++ b/dnsmasq/rootfs/usr/share/tempio/dnsmasq.config
@@ -30,5 +30,5 @@ srv-host={{ .srv }},{{ .host }},{{ .port }},{{ .priority }},{{ .weight }}
 
 # Static cname
 {{ range .cnames }}
-cname={{ .cname }},{{ .target }}
+cname={{ .name }},{{ .target }}
 {{ end }}
