--- a/zwave_js/rootfs/usr/share/tempio/zwave_config.conf
+++ b/zwave_js/rootfs/usr/share/tempio/zwave_config.conf
@@ -13,5 +13,6 @@
         "S2_AccessControl": "{{ .s2_access_control }}",
         "S2_Authenticated": "{{ .s2_authenticated }}",
         "S2_Unauthenticated": "{{ .s2_unauthenticated }}"
-    }
+    },
+    "enableSoftReset": {{ .soft_reset }}
 }
