--- a/zwave_js/config.json
+++ b/zwave_js/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Z-Wave JS",
-  "version": "0.1.46",
+  "version": "0.1.47",
   "slug": "zwave_js",
   "description": "Control a ZWave network with Home Assistant Z-Wave JS",
   "arch": ["amd64", "i386", "armhf", "armv7", "aarch64"],
@@ -22,7 +22,8 @@
     "s2_access_control_key": "",
     "s2_authenticated_key": "",
     "s2_unauthenticated_key": "",
-    "log_level": "info"
+    "log_level": "info",
+    "disable_soft_reset": false
   },
   "schema": {
     "device": "device(subsystem=tty)",
@@ -32,6 +33,7 @@
     "s2_unauthenticated_key": "match(|[0-9a-fA-F]{32,32})?",
     "log_level": "list(silly|debug|verbose|http|info|warn|error)?",
     "emulate_hardware": "bool?",
+    "disable_soft_reset": "bool?",
     "network_key": "match(|[0-9a-fA-F]{32,32})?"
   },
   "image": "homeassistant/{arch}-addon-zwave_js"
