--- a/zwave_js/config.json
+++ b/zwave_js/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Z-Wave JS",
-  "version": "0.1.46",
+  "version": "0.1.47",
   "slug": "zwave_js",
   "description": "Control a ZWave network with Home Assistant Z-Wave JS",
   "arch": ["amd64", "i386", "armhf", "armv7", "aarch64"],
@@ -8,6 +8,7 @@
   "startup": "services",
   "init": false,
   "stage": "stable",
+  "hassio_api": true,
   "homeassistant": "2021.2.0b0",
   "ports": {
     "3000/tcp": null
