--- a/dnsmasq/rootfs/usr/share/tempio/dnsmasq.config
+++ b/dnsmasq/rootfs/usr/share/tempio/dnsmasq.config
@@ -28,3 +28,6 @@ address=/{{ .host }}/{{ .ip }}
 srv-host={{ .srv }},{{ .host }},{{ .port }},{{ .priority }},{{ .weight }}
 {{ end }}
 
+# Advanced config, see https://thekelleys.org.uk/dnsmasq/docs/dnsmasq-man.html
+{{ .advanced }}
+
