--- a/deconz/config.yaml
+++ b/deconz/config.yaml
@@ -1,15 +1,19 @@
+version: 6.10.0
+slug: deconz
+name: deCONZ
+description: Control a Zigbee network with ConBee or RaspBee by Dresden Elektronik
+url: https://github.com/home-assistant/hassio-addons/tree/master/deconz
 apparmor: false
 arch:
-- amd64
-- armhf
-- aarch64
+  - amd64
+  - armhf
+  - aarch64
 backup_exclude:
-- '*/otau'
-description: Control a Zigbee network with ConBee or RaspBee by Dresden Elektronik
+  - "*/otau"
 devices:
-- /dev/mem
+  - /dev/mem
 discovery:
-- deconz
+  - deconz
 gpio: true
 homeassistant: 0.91.2
 image: homeassistant/{arch}-addon-deconz
@@ -17,7 +21,6 @@ ingress: true
 ingress_entry: ingress.html
 init: false
 kernel_modules: true
-name: deCONZ
 options:
   device: null
 panel_icon: mdi:zigbee
@@ -30,7 +33,7 @@ ports_description:
   5900/tcp: deCONZ via VNC (Not required for Ingress. Not secure!)
   8081/tcp: deCONZ WebSocket (Not required for Ingress)
 privileged:
-- SYS_RAWIO
+  - SYS_RAWIO
 schema:
   dbg_aps: int?
   dbg_info: int?
@@ -38,10 +41,6 @@ schema:
   dbg_zcl: int?
   dbg_zdp: int?
   device: device(subsystem=tty)
-slug: deconz
 startup: services
 udev: true
-url: https://github.com/home-assistant/hassio-addons/tree/master/deconz
 usb: true
-version: 6.10.0
-
