--- a/dhcp_server/config.yaml
+++ b/dhcp_server/config.yaml
@@ -1,50 +1,49 @@
+version: "1.2"
+slug: dhcp_server
+name: DHCP server
+description: A simple DHCP server
+url: https://home-assistant.io/addons/dhcp_server/
 advanced: true
 arch:
-- armhf
-- armv7
-- aarch64
-- amd64
-- i386
-description: A simple DHCP server
+  - armhf
+  - armv7
+  - aarch64
+  - amd64
+  - i386
 host_network: true
 image: homeassistant/{arch}-addon-dhcp_server
-name: DHCP server
 options:
   default_lease: 86400
   dns:
-  - 8.8.8.8
-  - 8.8.4.4
+    - 8.8.8.8
+    - 8.8.4.4
   domain: null
   hosts: []
   max_lease: 172800
   networks:
-  - broadcast: 192.168.1.255
-    gateway: 192.168.1.1
-    interface: eth0
-    netmask: 255.255.255.0
-    range_end: 192.168.1.200
-    range_start: 192.168.1.100
-    subnet: 192.168.1.0
+    - broadcast: 192.168.1.255
+      gateway: 192.168.1.1
+      interface: eth0
+      netmask: 255.255.255.0
+      range_end: 192.168.1.200
+      range_start: 192.168.1.100
+      subnet: 192.168.1.0
 schema:
   default_lease: int
   dns:
-  - str
+    - str
   domain: str
   hosts:
-  - ip: str
-    mac: str
-    name: str
+    - ip: str
+      mac: str
+      name: str
   max_lease: int
   networks:
-  - broadcast: str
-    gateway: str
-    interface: str
-    netmask: str
-    range_end: str
-    range_start: str
-    subnet: str
-slug: dhcp_server
+    - broadcast: str
+      gateway: str
+      interface: str
+      netmask: str
+      range_end: str
+      range_start: str
+      subnet: str
 startup: system
-url: https://home-assistant.io/addons/dhcp_server/
-version: '1.2'
-
