--- a/git_pull/config.yaml
+++ b/git_pull/config.yaml
@@ -1,25 +1,28 @@
+version: 7.13.1
+slug: git_pull
+name: Git pull
+description: Simple git pull to update the local configuration
+url: https://github.com/home-assistant/hassio-addons/tree/master/git_pull
 advanced: true
 arch:
-- armhf
-- armv7
-- aarch64
-- amd64
-- i386
+  - armhf
+  - armv7
+  - aarch64
+  - amd64
+  - i386
 boot: manual
-description: Simple git pull to update the local configuration
 hassio_api: true
 hassio_role: homeassistant
 image: homeassistant/{arch}-addon-git_pull
 init: false
 map:
-- config:rw
-name: Git pull
+  - config:rw
 options:
   auto_restart: false
   deployment_key: []
   deployment_key_protocol: rsa
-  deployment_password: ''
-  deployment_user: ''
+  deployment_password: ""
+  deployment_user: ""
   git_branch: master
   git_command: pull
   git_prune: false
@@ -29,12 +32,12 @@ options:
     interval: 300
   repository: null
   restart_ignore:
-  - ui-lovelace.yaml
-  - .gitignore
+    - ui-lovelace.yaml
+    - .gitignore
 schema:
   auto_restart: bool
   deployment_key:
-  - str
+    - str
   deployment_key_protocol: match(rsa|dsa|ecdsa|ed25519|rsa)
   deployment_password: password
   deployment_user: str
@@ -47,9 +50,5 @@ schema:
     interval: int
   repository: str
   restart_ignore:
-  - str
-slug: git_pull
+    - str
 startup: services
-url: https://github.com/home-assistant/hassio-addons/tree/master/git_pull
-version: 7.13.1
-
