--- a/ssh/config.yaml
+++ b/ssh/config.yaml
@@ -1,12 +1,16 @@
+version: 9.2.1
+slug: ssh
+name: Terminal & SSH
+description: Allow logging in remotely to Home Assistant using SSH
+url: https://github.com/home-assistant/hassio-addons/tree/master/ssh
 advanced: true
 arch:
-- armhf
-- armv7
-- aarch64
-- amd64
-- i386
+  - armhf
+  - armv7
+  - aarch64
+  - amd64
+  - i386
 audio: true
-description: Allow logging in remotely to Home Assistant using SSH
 hassio_api: true
 hassio_role: manager
 host_dbus: true
@@ -14,17 +18,16 @@ image: homeassistant/{arch}-addon-ssh
 ingress: true
 init: false
 map:
-- config:rw
-- ssl:rw
-- addons:rw
-- share:rw
-- backup:rw
-- media:rw
-name: Terminal & SSH
+  - config:rw
+  - ssl:rw
+  - addons:rw
+  - share:rw
+  - backup:rw
+  - media:rw
 options:
   apks: []
   authorized_keys: []
-  password: ''
+  password: ""
   server:
     tcp_forwarding: false
 panel_icon: mdi:console
@@ -33,15 +36,11 @@ ports:
   22/tcp: null
 schema:
   apks:
-  - str
+    - str
   authorized_keys:
-  - str
+    - str
   password: password
   server:
     tcp_forwarding: bool
-slug: ssh
 startup: services
 uart: true
-url: https://github.com/home-assistant/hassio-addons/tree/master/ssh
-version: 9.2.1
-
