--- a/zwave/config.yaml
+++ b/zwave/config.yaml
@@ -1,21 +1,24 @@
-arch:
-- amd64
-- i386
-- armhf
-- armv7
-- aarch64
+version: 0.9.1
+slug: zwave
+name: OpenZWave
 description: Control a ZWave network with Home Assistant
+url: https://github.com/home-assistant/hassio-addons/tree/master/zwave
+arch:
+  - amd64
+  - i386
+  - armhf
+  - armv7
+  - aarch64
 discovery:
-- ozw
+  - ozw
 homeassistant: 0.110.0.dev
 image: homeassistant/{arch}-addon-zwave
 ingress: true
 ingress_entry: vnc_lite.html
 init: false
-name: OpenZWave
 options:
   device: null
-  network_key: ''
+  network_key: ""
 panel_icon: mdi:z-wave
 panel_title: OpenZWave
 ports:
@@ -29,10 +32,6 @@ schema:
   instance: int(1,)?
   network_key: password
 services:
-- mqtt:want
-slug: zwave
+  - mqtt:want
 stage: experimental
 startup: services
-url: https://github.com/home-assistant/hassio-addons/tree/master/zwave
-version: 0.9.1
-
