--- a/zwave_js/config.yaml
+++ b/zwave_js/config.yaml
@@ -1,24 +1,27 @@
-arch:
-- amd64
-- i386
-- armhf
-- armv7
-- aarch64
+version: 0.1.49
+slug: zwave_js
+name: Z-Wave JS
 description: Control a ZWave network with Home Assistant Z-Wave JS
+url: https://github.com/home-assistant/hassio-addons/tree/master/zwave_js
+arch:
+  - amd64
+  - i386
+  - armhf
+  - armv7
+  - aarch64
 discovery:
-- zwave_js
+  - zwave_js
 hassio_api: true
 homeassistant: 2021.2.0b0
 image: homeassistant/{arch}-addon-zwave_js
 init: false
-name: Z-Wave JS
 options:
   device: null
   log_level: info
-  s0_legacy_key: ''
-  s2_access_control_key: ''
-  s2_authenticated_key: ''
-  s2_unauthenticated_key: ''
+  s0_legacy_key: ""
+  s2_access_control_key: ""
+  s2_authenticated_key: ""
+  s2_unauthenticated_key: ""
 ports:
   3000/tcp: null
 ports_description:
@@ -32,9 +35,5 @@ schema:
   s2_access_control_key: match(|[0-9a-fA-F]{32,32})?
   s2_authenticated_key: match(|[0-9a-fA-F]{32,32})?
   s2_unauthenticated_key: match(|[0-9a-fA-F]{32,32})?
-slug: zwave_js
 stage: stable
 startup: services
-url: https://github.com/home-assistant/hassio-addons/tree/master/zwave_js
-version: 0.1.49
-
