Fix letsencrypt build

--- a/letsencrypt/Dockerfile
+++ b/letsencrypt/Dockerfile
@@ -2,12 +2,14 @@ ARG BUILD_FROM
 FROM $BUILD_FROM
 
 # setup base
+ARG BUILD_ARCH
 ARG CERTBOT_VERSION
 ARG CERTBOT_DNS_DIRECTADMIN_VERSION
 ARG CERTBOT_NETCUP_VERSION
 ARG CERTBOT_NJALLA_VERSION
 ARG CERTBOT_GANDI_VERSION
 ARG CERTBOT_DNS_TRANSIP_VERSION
+ARG PIP_VERSION
 
 RUN apk add --no-cache --update \
         libffi \
@@ -18,6 +20,7 @@ RUN apk add --no-cache --update \
         libffi-dev \
         musl-dev \
         openssl-dev \
+    && pip3 install --no-cache-dir pip==${PIP_VERSION} \
     && pip3 install --no-cache-dir --find-links \
         "https://wheels.home-assistant.io/alpine-$(cut -d '.' -f 1-2 < /etc/alpine-release)/${BUILD_ARCH}/" \
         certbot==${CERTBOT_VERSION} \
