--- a/almond/build.yaml
+++ b/almond/build.yaml
@@ -1,7 +1,7 @@
 build_from:
-  aarch64: homeassistant/aarch64-base-debian:buster
-  amd64: homeassistant/amd64-base-debian:buster
-  armv7: homeassistant/armv7-base-debian:buster
+  aarch64: ghcr.io/home-assistant/aarch64-base-debian:buster
+  amd64: ghcr.io/home-assistant/amd64-base-debian:buster
+  armv7: ghcr.io/home-assistant/armv7-base-debian:buster
 codenotary:
   signer: notary@home-assistant.io
   base_image: notary@home-assistant.io
