--- a/deconz/build.yaml
+++ b/deconz/build.yaml
@@ -1,6 +1,6 @@
 build_from:
-  aarch64: homeassistant/aarch64-base-debian:buster
-  amd64: homeassistant/amd64-base-debian:buster
+  aarch64: ghcr.io/home-assistant/aarch64-base-debian:buster
+  amd64: ghcr.io/home-assistant/amd64-base-debian:buster
   armhf: homeassistant/armhf-base-raspbian:buster
 codenotary:
   signer: notary@home-assistant.io
