--- a/homematic/build.yaml
+++ b/homematic/build.yaml
@@ -1,6 +1,6 @@
 build_from:
-  armv7: homeassistant/armv7-base-debian:bullseye
-  i386: homeassistant/i386-base-debian:bullseye
+  armv7: ghcr.io/home-assistant/armv7-base-debian:bullseye
+  i386: ghcr.io/home-assistant/i386-base-debian:bullseye
 codenotary:
   signer: notary@home-assistant.io
   base_image: notary@home-assistant.io
