--- a/vlc/build.yaml
+++ b/vlc/build.yaml
@@ -1,8 +1,8 @@
 build_from:
-  aarch64: homeassistant/aarch64-base:3.13
-  amd64: homeassistant/amd64-base:3.13
-  armv7: homeassistant/armv7-base:3.13
-  i386: homeassistant/i386-base:3.13
+  aarch64: ghcr.io/home-assistant/aarch64-base:3.13
+  amd64: ghcr.io/home-assistant/amd64-base:3.13
+  armv7: ghcr.io/home-assistant/armv7-base:3.13
+  i386: ghcr.io/home-assistant/i386-base:3.13
 codenotary:
   signer: notary@home-assistant.io
   base_image: notary@home-assistant.io
