--- a/deconz/build.yaml
+++ b/deconz/build.yaml
@@ -1,7 +1,7 @@
 build_from:
   aarch64: ghcr.io/home-assistant/aarch64-base-debian:buster
   amd64: ghcr.io/home-assistant/amd64-base-debian:buster
-  armhf: homeassistant/armhf-base-raspbian:buster
+  armhf: ghcr.io/home-assistant/armhf-base-raspbian:buster
 codenotary:
   signer: notary@home-assistant.io
   base_image: notary@home-assistant.io
