--- a/ssh/build.yaml
+++ b/ssh/build.yaml
@@ -9,5 +9,5 @@ codenotary:
   base_image: notary@home-assistant.io
 args:
   CLI_VERSION: 4.14.0
-  LIBWEBSOCKETS_VERSION: 4.1.4
-  TTYD_VERSION: 1.6.3
+  LIBWEBSOCKETS_VERSION: 4.2.1
+  TTYD_VERSION: 62a5b635c6718109c64a6d629014f2784959f02c
