Add Azure DNS challenge support

--- a/letsencrypt/config.yaml
+++ b/letsencrypt/config.yaml
@@ -38,6 +38,7 @@ schema:
   dns:
     aws_access_key_id: str?
     aws_secret_access_key: str?
+    azure_config: str?
     cloudflare_api_key: str?
     cloudflare_api_token: str?
     cloudflare_email: email?
@@ -69,7 +70,7 @@ schema:
     ovh_consumer_key: str?
     ovh_endpoint: str?
     propagation_seconds: int(60,3600)?
-    provider: "list(dns-cloudflare|dns-cloudxns|dns-digitalocean|\
+    provider: "list(dns-azure|dns-cloudflare|dns-cloudxns|dns-digitalocean|\
       dns-directadmin|dns-dnsimple|dns-dnsmadeeasy|dns-gehirn|\
       dns-google|dns-linode|dns-luadns|dns-njalla|dns-nsone|dns-ovh|\
       dns-rfc2136|dns-route53|dns-sakuracloud|dns-netcup|dns-gandi|\
