--- a/letsencrypt/build.yaml
+++ b/letsencrypt/build.yaml
@@ -10,6 +10,7 @@ codenotary:
   base_image: notary@home-assistant.io
 args:
   CRYPTOGRAPHY_VERSION: 36.0.2
+  CERTBOT_DNS_AZURE_VERSION: 1.5.0
   CERTBOT_DNS_DIRECTADMIN_VERSION: 0.0.24
   CERTBOT_DNS_TRANSIP_VERSION: 0.4.3
   CERTBOT_GANDI_VERSION: 1.3.2
