HomeMatic CCU add-on retirement/migration path (#2352)
* added first version of createBackup.sh for homematic addon

* move bin directory to opt/hm

* debug

* debug

* minor cleanup change.

* added a patched version of cp_security.cgi to support direct WebUI based
backup creation+download.

* minor fix

* minor fix

* version bump and removal of subsystem=tty filter for device spec

* added changed to CHANGELOG.md

* Added retirement notification

* Update README.md

* Update DOCS.md

* Update CHANGELOG.md

* fixed shellcheck errors.

* Update homematic/CHANGELOG.md

* Update homematic/config.yaml

Co-authored-by: Pascal Vizeli <pascal.vizeli@syshack.ch>

--- a/homematic/config.yaml
+++ b/homematic/config.yaml
@@ -1,4 +1,4 @@
-version: 11.3.0
+version: 99.0.0
 slug: homematic
 name: HomeMatic CCU
 description: HomeMatic central based on OCCU
@@ -33,12 +33,12 @@ ports_description:
   80/tcp: ReGaHss Webinterface (Not required for Ingress)
 schema:
   hmip:
-    - device: device(subsystem=tty)
+    - device: device
       type: match(HMIP_CCU2)
   hmip_enable: bool
   regahss_reset: bool?
   rf:
-    - device: device(subsystem=tty)
+    - device: device
       reset: bool?
       type: match(CCU2)
   rf_enable: bool
