Fix YAMLlint issues

--- a/deconz/config.yaml
+++ b/deconz/config.yaml
@@ -2,7 +2,8 @@
 version: 6.11.1
 slug: deconz
 name: deCONZ
-description: Control a Zigbee network with ConBee or RaspBee by Dresden Elektronik
+description: >
+  Control a Zigbee network with ConBee or RaspBee by Dresden Elektronik.
 url: https://github.com/home-assistant/hassio-addons/tree/master/deconz
 apparmor: false
 arch:
