--- a/.github/move.yml
+++ b/.github/move.yml
@@ -1,6 +1,7 @@
 # Configuration for move-issues - https://github.com/dessant/move-issues
 
-# Delete the command comment. Ignored when the comment also contains other content
+# Delete the command comment. Ignored when the comment also contains other
+# content.
 deleteCommand: true
 # Close the source issue after moving
 closeSourceIssue: true
