Improve GitHub action (#2364)
* Add YAML linter

* Drop GitHub registry login as its not required at this point

* Add YAML document start marker

* Fix YAMLlint issues

* Fix YAMLlint issues in .github yaml files

* Fix YAMLlint issue in .github/dependabot.yml

* Remove .github/move.yml

* Set dependabot to weekly

Co-authored-by: Joakim Sørensen <hi@ludeeus.dev>

* Use YAML strip option where appropriate

* Fix multiline string

Co-authored-by: Joakim Sørensen <hi@ludeeus.dev>

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,3 +1,5 @@
+---
+# yamllint disable rule:truthy
 name: Lint
 
 env:
@@ -29,17 +31,15 @@ jobs:
               hadolint/hadolint:${{ env.HADOLINT_VERSION }} < "$dockerfile"
           done
 
-  jq:
+  yamllint:
     runs-on: ubuntu-latest
-    name: JQ
+    name: YAMLLint
     steps:
       - name: Check out the repository
         uses: actions/checkout@v3
 
-      - name: Run linter
-        run: |
-          shopt -s globstar
-          cat **/*.json | jq '.'
+      - name: Run YAMLLint
+        uses: frenck/action-yamllint@v1.1
 
   shellcheck:
     runs-on: ubuntu-latest
