--- a/letsencrypt/config.yaml
+++ b/letsencrypt/config.yaml
@@ -1,3 +1,4 @@
+---
 version: 4.12.0
 slug: letsencrypt
 name: Let's Encrypt
@@ -66,7 +67,11 @@ schema:
     ovh_consumer_key: str?
     ovh_endpoint: str?
     propagation_seconds: int(60,3600)?
-    provider: list(dns-cloudflare|dns-cloudxns|dns-digitalocean|dns-directadmin|dns-dnsimple|dns-dnsmadeeasy|dns-gehirn|dns-google|dns-linode|dns-luadns|dns-njalla|dns-nsone|dns-ovh|dns-rfc2136|dns-route53|dns-sakuracloud|dns-netcup|dns-gandi|dns-transip)?
+    provider: "list(dns-cloudflare|dns-cloudxns|dns-digitalocean|\
+               dns-directadmin|dns-dnsimple|dns-dnsmadeeasy|dns-gehirn|\
+               dns-google|dns-linode|dns-luadns|dns-njalla|dns-nsone|dns-ovh|\
+               dns-rfc2136|dns-route53|dns-sakuracloud|dns-netcup|dns-gandi|\
+               dns-transip)?"
     rfc2136_algorithm: str?
     rfc2136_name: str?
     rfc2136_port: str?
