--- a/mariadb/config.yaml
+++ b/mariadb/config.yaml
@@ -1,3 +1,4 @@
+---
 version: 2.4.0
 slug: mariadb
 name: MariaDB
@@ -33,8 +34,9 @@ schema:
   rights:
     - database: str
       privileges:
-        - list(ALTER|CREATE|CREATE ROUTINE|CREATE TEMPORARY TABLES|CREATE VIEW|DELETE|DELETE
-          HISTORY|DROP|EVENT|GRANT OPTION|INDEX|INSERT|LOCK TABLES|SELECT|SHOW VIEW|TRIGGER|UPDATE)?
+        - "list(ALTER|CREATE|CREATE ROUTINE|CREATE TEMPORARY TABLES|\
+           CREATE VIEW|DELETE|DELETE HISTORY|DROP|EVENT|GRANT OPTION|INDEX|\
+           INSERT|LOCK TABLES|SELECT|SHOW VIEW|TRIGGER|UPDATE)?"
       username: str
 services:
   - mysql:provide
