--- a/duckdns/config.yaml
+++ b/duckdns/config.yaml
@@ -1,7 +1,9 @@
+---
 version: 1.14.0
 slug: duckdns
 name: Duck DNS
-description: Free Dynamic DNS (DynDNS or DDNS) service with Let's Encrypt support
+description: >-
+  Free Dynamic DNS (DynDNS or DDNS) service with Let's Encrypt support
 url: https://github.com/home-assistant/hassio-addons/tree/master/duckdns
 arch:
   - armhf
