--- a/google_assistant/config.yaml
+++ b/google_assistant/config.yaml
@@ -1,8 +1,10 @@
+---
 version: 2.5.0
 slug: google_assistant
 name: Google Assistant SDK
 description: A virtual personal assistant developed by Google
-url: https://github.com/home-assistant/hassio-addons/tree/master/google_assistant
+url: >-
+  https://github.com/home-assistant/hassio-addons/tree/master/google_assistant
 advanced: true
 arch:
   - armhf
