--- a/letsencrypt/Dockerfile
+++ b/letsencrypt/Dockerfile
@@ -3,6 +3,7 @@ FROM $BUILD_FROM
 
 # setup base
 ARG \
+    BUILD_ARCH \
     CERTBOT_VERSION \
     CERTBOT_DNS_DIRECTADMIN_VERSION \
     CERTBOT_NETCUP_VERSION \
