--- a/almond/build.yaml
+++ b/almond/build.yaml
@@ -7,4 +7,5 @@ codenotary:
   signer: notary@home-assistant.io
   base_image: notary@home-assistant.io
 args:
-  ALMOND_VERSION: v2.0.1
+  GENIE_SERVER_VERSION: v3.0.1
+  GENIE_CLIENT_VERSION: v0.1.0
