--- a/dhcp_server/config.yaml
+++ b/dhcp_server/config.yaml
@@ -4,6 +4,7 @@ slug: dhcp_server
 name: DHCP server
 description: A simple DHCP server
 url: https://home-assistant.io/addons/dhcp_server/
+codenotary: notary@home-assistant.io
 advanced: true
 arch:
   - armhf
