--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,6 +8,7 @@
       "WORKSPACE_DIRECTORY": "${containerWorkspaceFolder}"
     },
     "extensions": ["timonwong.shellcheck", "esbenp.prettier-vscode"],
+    "mounts": [ "type=volume,target=/var/lib/docker" ],
     "settings": {
       "terminal.integrated.profiles.linux": {
         "zsh": {
