:lock: Sign add-on with Codenotary Community Attestation Service (CAS)

--- a/samba/config.yaml
+++ b/samba/config.yaml
@@ -4,6 +4,7 @@ slug: samba
 name: Samba share
 description: Expose Home Assistant folders with SMB/CIFS
 url: https://github.com/home-assistant/hassio-addons/tree/master/samba
+codenotary: notary@home-assistant.io
 arch:
   - armhf
   - armv7
